// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Todo should create a todo 1`] = `
{
  "body": {
    "kind": "single",
    "singleResult": {
      "data": {
        "createTodo": {
          "content": "Test todo.",
        },
      },
      "errors": undefined,
    },
  },
  "http": {
    "headers": Map {
      "cache-control" => "no-store",
    },
    "status": undefined,
  },
}
`;

exports[`Todo should get a todo 1`] = `
{
  "body": {
    "kind": "single",
    "singleResult": {
      "data": {
        "todo": {
          "content": "todo 1",
        },
      },
      "errors": undefined,
    },
  },
  "http": {
    "headers": Map {
      "cache-control" => "no-store",
    },
    "status": undefined,
  },
}
`;

exports[`Todo should get all todos 1`] = `
{
  "body": {
    "kind": "single",
    "singleResult": {
      "data": {
        "todos": [
          {
            "content": "todo 1",
            "isDone": false,
          },
          {
            "content": "todo 2",
            "isDone": true,
          },
        ],
      },
      "errors": undefined,
    },
  },
  "http": {
    "headers": Map {
      "cache-control" => "no-store",
    },
    "status": undefined,
  },
}
`;

exports[`Todo should return an error when updating a todo with a non-existent _id 1`] = `
{
  "body": {
    "kind": "single",
    "singleResult": {
      "data": null,
      "errors": [
        {
          "extensions": {
            "code": "INTERNAL_SERVER_ERROR",
          },
          "locations": [
            {
              "column": 3,
              "line": 2,
            },
          ],
          "message": "Entity not found",
          "path": [
            "updateTodo",
          ],
        },
      ],
    },
  },
  "http": {
    "headers": Map {
      "cache-control" => "no-store",
    },
    "status": undefined,
  },
}
`;

exports[`Todo should update a todo 1`] = `
{
  "body": {
    "kind": "single",
    "singleResult": {
      "data": {
        "updateTodo": {
          "content": "Updated todo",
          "isDone": true,
        },
      },
      "errors": undefined,
    },
  },
  "http": {
    "headers": Map {
      "cache-control" => "no-store",
    },
    "status": undefined,
  },
}
`;
